--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.5.0",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
@@ -55,5 +56,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-datepicker": "^4.15.0"
   }
 }
