--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "axios": "^1.5.0",
+    "firebase": "^10.3.1",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-datepicker": "^4.16.0",
