--- a/front/package.json
+++ b/front/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
+    "sass": "^1.66.1",
     "styled-components": "^6.0.7",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
