--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.8.0",
     "recoil": "^0.7.7",
     "sass": "^1.66.1",
     "styled-components": "^6.0.7",
