--- a/front/package.json
+++ b/front/package.json
@@ -18,9 +18,11 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "recharts": "^2.8.0",
     "recoil": "^0.7.7",
     "sass": "^1.66.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.7",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
@@ -62,6 +64,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-datepicker": "^4.15.0"
+    "@types/react-datepicker": "^4.15.0",
+    "@types/react-slick": "^0.23.10"
   }
 }
