--- a/front/package.json
+++ b/front/package.json
@@ -21,6 +21,7 @@
     "react-slick": "^0.29.0",
     "recharts": "^2.8.0",
     "recoil": "^0.7.7",
+    "recoil-persist": "^5.1.0",
     "sass": "^1.66.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.7",
