fix: 디바이스 토큰 받아오기

--- a/front/package.json
+++ b/front/package.json
@@ -65,6 +65,7 @@
   },
   "devDependencies": {
     "@types/react-datepicker": "^4.15.0",
-    "@types/react-slick": "^0.23.10"
+    "@types/react-slick": "^0.23.10",
+    "@babel/plugin-proposal-private-property-in-object": "^7.0.0"
   }
 }
