refactor: 송금, 더치페이, 1원 이체 api 예외 처리

--- a/back/hack/src/main/resources/application.properties
+++ b/back/hack/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=update
 spring.mvc.static-path-pattern:/static/**
+server.error.include-stacktrace=never
+server.error.whitelabel.enabled=true
