--- a/back/hack/src/main/resources/application.properties
+++ b/back/hack/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/sshh?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.username=admin
+spring.datasource.password=wkdlsh1836~
+
 spring.datasource.url=jdbc:mysql://database-1.chq5meduteci.ap-northeast-2.rds.amazonaws.com:3306/csi_db?useSSL=false&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
 
 
