--- a/back/hack/src/main/resources/application.properties
+++ b/back/hack/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-#spring.datasource.url=jdbc:mysql://localhost:3306/sshh?useSSL=false&allowPublicKeyRetrieval=true&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
-spring.datasource.url=jdbc:mysql://database-1.chq5meduteci.ap-northeast-2.rds.amazonaws.com:3306/csi_db?useSSL=false&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://localhost:3306/sshh?useSSL=false&allowPublicKeyRetrieval=true&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+#spring.datasource.url=jdbc:mysql://database-1.chq5meduteci.ap-northeast-2.rds.amazonaws.com:3306/csi_db?useSSL=false&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
 spring.datasource.username=root
 spring.datasource.password=1234
 
