--- a/front/package.json
+++ b/front/package.json
@@ -13,7 +13,10 @@
     "axios": "^1.5.0",
     "firebase": "^10.3.1",
     "http-proxy-middleware": "^2.0.6",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.2",
+    "react-calendar": "^4.6.0",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
@@ -65,8 +68,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.0.0",
+    "@types/react-big-calendar": "^1.6.4",
     "@types/react-datepicker": "^4.15.0",
-    "@types/react-slick": "^0.23.10",
-    "@babel/plugin-proposal-private-property-in-object": "^7.0.0"
+    "@types/react-slick": "^0.23.10"
   }
 }
