--- a/back/hack/src/main/resources/application.properties
+++ b/back/hack/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/sshh?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
-
+spring.jpa.properties.hibernate.jdbc.time_zone = Asia/Seoul
 spring.datasource.username=admin
 spring.datasource.password=wkdlsh1836~
 
