--- a/back/hack/src/main/resources/application.properties
+++ b/back/hack/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.mvc.static-path-pattern:/static/**
 server.error.include-stacktrace=never
 server.error.whitelabel.enabled=true
+
+project.properties.firebase-create-scoped=https://www.googleapis.com/auth/firebase.messaging
+project.properties.firebase-topic=fx_rate_notification
