fix: 소비로그 수정, 카카오맵수정

--- a/front/.env
+++ b/front/.env
@@ -8,3 +8,4 @@
   REACT_APP_FCM_APP_ID= "1:764228098486:web:08dcc6f925daaec2c38917"
   REACT_APP_FCM_MEASUREMENT_ID= "G-VDVC706LKK"
   REACT_APP_VAPID_KEY="BDj_FnyhOJ2OSZiXro1dOn0ac9PoYE5N3QnGjFPgzt7I3bnbn8gw8oFFE_P_4NmGGtSSTExj4pTlxJocOoWijCY"
+  REACT_APP_KAKAO_KEY="//dapi.kakao.com/v2/maps/sdk.js?appkey=9d2f5e313f7480e75807d0e7aa01170d"
