--- a/front/.env
+++ b/front/.env
@@ -1,11 +1,11 @@
   WDS_SOCKET_PORT=0
   
-  REACT_APP_FCM_API_KEY= "AIzaSyDufkEwo64LRMB-mnoaFF4ZR4mnCd_AtBQ"
-  REACT_APP_FCM_AUTH_DOMAIN= "tutice-c8751.firebaseapp.com"
-  REACT_APP_FCM_PROJECT_ID= "tutice-c8751"
-  REACT_APP_FCM_STORAGE_BUCKET= "tutice-c8751.appspot.com"
-  REACT_APP_FCM_MESSAGING_SENDER_ID= "764228098486"
-  REACT_APP_FCM_APP_ID= "1:764228098486:web:08dcc6f925daaec2c38917"
-  REACT_APP_FCM_MEASUREMENT_ID= "G-VDVC706LKK"
-  REACT_APP_VAPID_KEY="BDj_FnyhOJ2OSZiXro1dOn0ac9PoYE5N3QnGjFPgzt7I3bnbn8gw8oFFE_P_4NmGGtSSTExj4pTlxJocOoWijCY"
-  REACT_APP_KAKAO_KEY="//dapi.kakao.com/v2/maps/sdk.js?appkey=9d2f5e313f7480e75807d0e7aa01170d"
+  REACT_APP_FCM_API_KEY= ""
+  REACT_APP_FCM_AUTH_DOMAIN= ""
+  REACT_APP_FCM_PROJECT_ID= ""
+  REACT_APP_FCM_STORAGE_BUCKET= ""
+  REACT_APP_FCM_MESSAGING_SENDER_ID= ""
+  REACT_APP_FCM_APP_ID= ""
+  REACT_APP_FCM_MEASUREMENT_ID= ""
+  REACT_APP_VAPID_KEY=""
+  REACT_APP_KAKAO_KEY=""
