--- a/back/hack/src/main/resources/application.properties
+++ b/back/hack/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://database-1.chq5meduteci.ap-northeast-2.rds.amazonaws.com:3306/csi_db?useSSL=false&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
 spring.datasource.username=admin
-spring.datasource.password=wkdlsh1836~
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=update
@@ -11,4 +11,4 @@ server.error.whitelabel.enabled=true
 project.properties.firebase-create-scoped=https://www.googleapis.com/auth/firebase.messaging
 project.properties.firebase-topic=fx_rate_notification
 
-kakao.api.key=4dcfd7ec89e05e2f77f2f066311dc53e
+kakao.api.key=
